# mvln

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en-US/: main.ftl
i18n/zh-CN/: main.ftl
scripts/: pre-commit.sh
src/: cli.rs  error.rs  glob_expand.rs  i18n.rs  lib.rs  main.rs  operation.rs  path_utils.rs
tests/: integration.rs  safety.rs
